= 3.2.7 (not released)
- restore missing update.persistent feature

= 3.2.6
- fix ordering with DISTINCT call
- allow to override some human condition strings in i18n, and translate select values for non-association columns

= 3.2.5
- add outer window for pagination links
- workaround rails 3.2.3 bug in TimeWithZone#to_time
- fix date picker format for datetime fields
- fix bitfields bridge when some actions are not used
- use core config label when is set and STI is not used

= 3.2.4
- don't break on custom SQL sorting (e.g. sorting with functions)
- fix cancel inplace edit with jquery
- fix nested scaffolds inside nested and embedded scaffolds
- fix collapsed subgroups
- fix inplace edit for checkboxes columns with true as default value
- fix calendar date select bridge

= 3.0.6 .. 3.2.3
- many changes

= 3.0.5

- switch from explicit requires to autoloading
- get nested action links up and running

= 3.0.4

- Fix a typo that made 3.0.3 unusable.

= 3.0.3

- Fixing 'require' ordering
- Code for nested and subgrouped action links
- bugfixes for better html generation

= 3.0.2

- Two bug fixes and a deprecation silencing.

= 3.0.1

- Fixing the requiring of files.

= 3.0.0

- Packaging up vhochstein's fork for Rails 3.0 as a gem.

= 1.2RC1

== FEATURES

- Added view helpers (active_scaffold_javascripts, active_scaffold_stylesheets, active_scaffold_ie_stylesheets) to help with asset cacheing (Alexander Semyonov)
- Works with Rails 2.1 (2.0 / 1.2.x will continue to be supported by version 1.1)

== FIXES

- Javascript compatibility with FF3 / Safari 3.1 (Mike Dalessio)
  see http://groups.google.com/group/activescaffold/browse_thread/thread/d37afa3f2ac687f2/b34ebf62d767bee3
- Avoid ruby deprecation warning in config/list.rb (Dustin Sallings)
- Fixes bug where template overrides are ignored when placed in Engines plugins (Mike Dalessio)
- Fixed in_place_editor to work with latest control.js